Version 2.1 Arreglado